fix #415: css fix for search bar too small

--- a/invenio/modules/search/static/css/search/searchbar.css
+++ b/invenio/modules/search/static/css/search/searchbar.css
@@ -96,3 +96,28 @@ values copied from bootstrap ones for higher than xs size counterparts -> to be 
 .navbar-form .input-group .form-control {
   width: 100%;
 }
+
+.navbar-form .input-group .input-group-btn {
+  width: 1%;
+}
+
+/*
+  too keep searchbar with buttons in one line
+*/
+@media (min-width: 768px) { /* ld size */
+  #searchform-input-group {
+    width: 670px;
+  }
+}
+
+@media (min-width: 992px) { /* md size */
+  #searchform-input-group {
+    width: 710px;
+  }
+}
+
+@media (min-width: 1200px) { /* ld size */
+  #searchform-input-group {
+    width: 915px;
+  }
+}
